--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,16 @@ dependencies:
     
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
-  image_picker: ^0.8.7+4
+  image_picker: ^1.1.2
   url_launcher: ^6.2.5 
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.7.0
+  http: ^0.13.6
+image_picker: ^1.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
